k8s/health.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-deployment
  labels:
    app: health
spec:
  replicas: 3
  selector:
    matchLabels:
      app: health
  template:
    metadata:
      labels:
        app: health
    spec:
      containers:
      - name: health
        image: vvscode/ts-service:latest
        ports:
          - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  type: NodePort
  selector:
    app: health
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 32080
