k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/vvscode
        pathType: Prefix
        backend:
          service:
            name: health-service
            port: 
              number: 8000
